FIND_S ,Cand_Elim

--- a/FIND_S ,Cand_Elim.ipynb
+++ b/FIND_S ,Cand_Elim.ipynb
@@ -208,15 +208,15 @@
     "print(a)\n",
     "def cand_elim(a):\n",
     "    specific_hyp=a.iloc[0].tolist()\n",
-    "    general_hyp=[['?' for i in range(len(specific_hyp))]for i in range(len(specific_hyp))]\n",
+    "    general_hyp=[['?' for i in range(len(specific_hyp)-1)]for i in range(len(specific_hyp)-1)]\n",
     "    for index, row in a.iterrows():\n",
     "        if row.iloc[-1]==\"yes\":\n",
-    "            for j in range(len(specific_hyp)):\n",
+    "            for j in range(len(specific_hyp)-1):\n",
     "                if row[j]!=specific_hyp[j]:\n",
     "                    specific_hyp[j]=\"?\"\n",
     "                    general_hyp[j][j]=\"?\"\n",
     "        if row.iloc[-1]==\"no\":\n",
-    "            for j in range(len(specific_hyp)):\n",
+    "            for j in range(len(specific_hyp)-1):\n",
     "                if row[j]!=specific_hyp[j]:\n",
     "                    general_hyp[j][j]=specific_hyp[j]\n",
     "                else:\n",
